feat: Update news routes
